--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,16 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  /*background-color: #222;*/
+  background-color: #28190a;
+  /*height: 150px;*/
   padding: 20px;
   color: white;
+}
+
+#searchInput {
+  color: black;
+  margin-top: 10px;
 }
 
 .App-intro {
@@ -22,3 +28,77 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+#results {
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.singleResult {
+  text-align: left;
+  padding-left: 10px;
+
+  /*color: black;*/
+
+  border-style: solid;
+  border-color: rgba(10, 10, 40, 0.75);
+  border-width: 2px;
+  
+  border-left-width: 10px;
+  border-left-color: rgba(10, 10, 40, 0.75);
+
+  background-color: white;
+  box-sizing: border-box;
+}
+
+.singleResult:hover, .singleResult:focus, .singleResult:active {
+  color: white;
+}
+
+
+.hvr-fade {
+  /*display: inline-block;*/
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
+  color: white;
+  background-color: rgba(10, 10, 40, 0.75);
+}
+
+.hvr-fade:hover > a, .hvr-fade:focus  > a, .hvr-fade:active > a{
+  color: white;
+}
+
+
+
+.extract {
+  margin: 10px 10px 10px 10px;
+}
+
+.loading {    
+    background-color: #ffffff;
+    background-image: url("http://loadinggif.com/images/image-selection/3.gif");
+    background-size: 25px 25px;
+    background-position:right center;
+    background-repeat: no-repeat;
+}
+
+/*
+.pure-button {
+  background-color: rgba(10, 10, 40, 0.75) !important;
+  color: rgba(10, 10, 40, 0.75) !important;
+}*/
